[tool.poetry]
name = "github-actions-test"
version = "0.3.2"
description = ""
authors = ["Kentaro Kanada <kanada.kentaro0727@gmail.com>"]
readme = "README.md"
packages = [{include = "github_actions_test"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
